# microbio

./: README.md  all.txt  combinedFasta.py  combined_fasta.py  createFasta.py  indCompletegenome_60.csv  indianKlebStrains.txt  indianwholegenome_570.csv  netResultsCsv.py  practice.py  practice2.py  practice3.py  practice4.py  strains.py
ncbidare/: MANIFEST.in  README.md  results.txt  setup.cfg  setup.py
ncbidare/src/: ncbiget.py
ncbidare/src/ncbidare.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
ncbidare/tests/: initial.py
previous tries/: Entrez_practice.py  genbank_eg2.txt  indian strains 17.txt  indian_strains.csv  indian_strains.xlsx  out.txt  out_india.txt  wholegenome_india.csv  xml_results.py
samplefiles/: genbank_eg.txt  indian_strains_try2.csv  indian_strains_try3.csv  kleb_EN5275.fasta  kleb_EN5338.fasta
