[metadata]
name = ncbidare
version = 0.0.1
author = Riddhi Sera
author_email = sera.1@iitj.ac.in
description = to fetch NCBI data to your local computer
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/riddhisera/microbio
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Operating System :: OS Independent

[options]
package_dir=
    =src
packages = find:
python_requires = >=3.7
include_package_data = True

[options.packages.find]
where = src